--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,4 +2,6 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
+@charset "utf-8";
+@import "../_sass/bulma-0.8.0/bulma.sass";
 @import "minima";
