--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,12 +2,14 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
-  min-height: $spacing-unit * 1.865;
+  background: #494a4b;
 
   // Positioning context for the mobile navigation icon
   position: relative;
+}
+
+.site-header .navbar {
+  background: none;
 }
 
 .site-title {
