--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,3 +5,7 @@
 @charset "utf-8";
 @import "../_sass/bulma-0.8.0/bulma.sass";
 @import "minima";
+
+.navbar-item, .navbar-link {
+  font-weight: bold;
+}
