Add proper footer; Restyle several things

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,22 @@
 <footer class="footer">
-  <div class="content columns">
-
-    <div class="column">
-      <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
-      <ul class="contact-list">
-        <li class="p-name">
-          {%- if site.author -%}
-            {{ site.author | escape }}
-          {%- else -%}
-            {{ site.title | escape }}
-          {%- endif -%}
-          </li>
-          {%- if site.email -%}
-          <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-          {%- endif -%}
-      </ul>
+  <div class="columns">
+    <div class="column is-narrow">
+      <a href="https://forum.spatialtoolbox.vuforia.com/">Contact</a>
     </div>
-
-    <div class="column">
-      <p>{{- site.description | escape -}}</p>
+    <div class="column is-narrow">
+      <a href="https://developer.vuforia.com/legal/tos">Terms of Use</a>
     </div>
+    <div class="column is-narrow">
+      <a href="https://developer.vuforia.com/legal/privacy">Privacy Policy</a>
+    </div>
+    <div class="column is-narrow">
+      <a href="https://developer.vuforia.com/legal/cookies">Cookie Policy</a>
+    </div>
+    <div class="column is-narrow">
+      <a href="http://www.ptc.com/careers">Careers</a>
+    </div>
+  </div>
+  <div class="footer-disclaimer">
+    <p>©2020 PTC Inc. All rights reserved. Nothing in these materials is an offer to sell any of the components or devices referenced herein. PTC and Vuforia are trademarks or registered trademarks of PTC Inc. in the United States and other countries. Other products and brand names referenced may be trademarks or registered trademarks of their respective owners. Vuforia is a product of PTC Inc.</p>
   </div>
 </footer>
