--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,9 +3,82 @@
 ---
 
 @charset "utf-8";
+
+$navbar-background-color: #494a4b;
+$navbar-dropdown-background-color: #494a4b;
+$navbar-dropdown-item-hover-color: white;
+$navbar-dropdown-item-hover-background-color: #292929;
+$navbar-item-hover-color: white;
+$navbar-item-hover-background-color: #292929;
+$navbar-dropdown-arrow: white;
+$footer-padding: 3rem 4rem 0.5rem;
+
+$menu-item-active-background-color: #e0e0e0;
+$menu-item-hover-background-color: #c0c0c0;
+$menu-item-active-color: black;
+
 @import "../_sass/bulma-0.8.0/bulma.sass";
 @import "minima";
 
 .navbar-item, .navbar-link {
   font-weight: bold;
+}
+/*
+.navbar-menu {
+  background-color: #494a4b;
+}
+*/
+.navbar a, .navbar a:visited {
+  color: white;
+}
+
+.navbar-dropdown {
+  border-top: none;
+}
+
+.footer {
+  background: #5b6465;
+  color: white;
+}
+
+.footer a, .footer a:visited {
+  color: white;
+}
+
+.footer .column:first-child {
+  border-left: none;
+}
+
+.footer .column {
+  padding: 0 1rem;
+  border-left: 1px solid white;
+}
+
+.footer-disclaimer {
+  padding: 1rem 0;
+  border-top: 1px solid white;
+  max-width: 40rem;
+  font-size: small;
+}
+
+@include media-query($on-laptop) {
+  .footer .column {
+    border: none;
+  }
+
+  .footer {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+
+.menu {
+  background: #efefef;
+  padding: 1.5rem;
+  width: 23rem;
+}
+
+.menu a, .menu a:visited {
+  color: black;
 }
