Updated graphics with pngs and styling for home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   -->
 
   <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
-    <div class="post-content e-content" itemprop="articleBody">
+    <div class="post-content e-content center" itemprop="articleBody">
       {{ content }}
     </div>
   </article>
