--- a/assets/main.scss
+++ b/assets/main.scss
@@ -91,3 +91,19 @@ $menu-item-active-color: black;
 .menu a, .menu a:visited {
   color: black;
 }
+
+.center {
+  margin: auto;
+}
+
+.highlight {
+  color: #48c774;
+}
+
+.num-highlight {
+  font-size: 2em;
+}
+
+.header-home {
+  margin-bottom: 60px !important;
+}
