--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,6 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  <meta property="og:image" content="https://spatialtoolbox.vuforia.com/resources/toolbox_OG.jpg">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
