Resize icon and adjust wrapper on tiny screens

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="{{ "/" | relative_url }}">
-          <img alt="{{ site.title | escape }}" src="{{ "/resources/vuforia-spatialtoolbox-darkBG.svg" | relative_url }}" width="330" height="60"/>
+          <img class="navbar-icon" alt="{{ site.title | escape }}" src="{{ "/resources/vuforia-spatialtoolbox-darkBG.svg" | relative_url }}" height="28"/>
         </a>
 
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
