Iterate on 101 sidebar style

--- a/_layouts/home-101.html
+++ b/_layouts/home-101.html
@@ -17,7 +17,7 @@ layout: default
   </article>
   </div>
 
-  <div class="column is-narrow" id="sidebar-container">
+  <div class="column is-narrow minimal" id="sidebar-container">
   </div>
 
   <script src="/assets/sidebar-101.js"></script>
