--- a/assets/main.scss
+++ b/assets/main.scss
@@ -142,12 +142,25 @@ pre.highlight {
   width: 23rem;
 }
 
-#sidebar-container > .menu {
+.menu-sidebar-101 {
   position: fixed;
   top: 50%;
   transform: translateY(-50%);
 }
 
-#sidebar-container .menu-list {
+.menu-list-101 {
   margin: 0;
+}
+
+#sidebar-container.minimal .menu-link-101 {
+  background: none;
+  color: rgba(0, 0, 0, 0.25);
+}
+
+#sidebar-container.minimal .menu-link-101.is-active {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+#sidebar-container.minimal .menu-sidebar-101 {
+  background: none;
 }
